<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="20sp"/>
        <Button
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:id="@+id/settinglogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="登录"
            android:layout_gravity="end"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/alarmselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/alarmselect"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"/>
    <Button
        android:id="@+id/wordselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/wordselect"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"/>
    <Button
        android:id="@+id/questionselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/questionselect"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"/>
    <Button
        android:id="@+id/aboutus"
        android:background="@drawable/button"
        android:text="@string/aboutus"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/nouse"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/something"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
