<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/alarmvoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/rgforalarm"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/marriage"
                android:text="@string/marriage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="16sp"/>
            <RadioButton
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/air"
                android:text="@string/air"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
            <RadioButton
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/original"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/original"
                android:textSize="16sp"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
